# de-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-airflow.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
dags/: example_pipeline.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/staging/: schema.yml
dbt/tests/: assert_example_items_not_empty.sql
docker/airflow/: Dockerfile
docker/postgres/: init.sql
docs/: de-environment-setup.md  de_environment_setup_guide.md
extractors/: __init__.py  base.py
extractors/api/: example_api.py
loaders/: __init__.py  postgres_loader.py
notebooks/: scrapbook.py
scripts/: init_dev.sh
tests/: conftest.py
tests/test_extractors/: test_base.py  test_example_api.py
tests/test_loaders/: test_postgres_loader.py
