[project]
name = "de-template"
version = "0.1.0"
description = "General-purpose data engineering & data science project template"
requires-python = ">=3.11"

# ── Core runtime dependencies ──────────────────────────────────────────────
dependencies = [
    "apache-airflow>=2.9.0",
    "dbt-postgres>=1.8.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "tenacity>=8.3.0",
    "structlog>=24.0.0",
]

# ── Optional dependency groups ─────────────────────────────────────────────
[dependency-groups]

dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "types-requests>=2.31.0",
]

# Activate later: `uv sync --group notebooks`
notebooks = [
    "jupyter>=1.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "sqlalchemy>=2.0.0",
]

# Activate for ML experimentation later
ml = [
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.0",
    "mlflow>=2.13.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["extractors", "loaders"]

# ── Tool configuration ─────────────────────────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=extractors --cov=loaders --cov-report=term-missing"
